# automated-lab-testing-sibfu-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  nginx.conf  nginx.prod.conf  pyproject.toml  run
.github/workflows/: github-acions.yml
app/: __main__.py  callback_server.py
app/config/: __init__.py  config.py  languages.py  redis.py
app/db/: __init__.py  models.py
app/dependencies/: __init__.py  auth.py  pagination.py
app/endpoints/: __init__.py  attempt.py  auth.py  callback_server.py  course.py  image.py  language.py  ping.py  practice.py  task.py  testcase.py  user.py
app/schemas/: __init__.py  attempt.py  auth.py  callback_server.py  course.py  image.py  language.py  pagination.py  practice.py  task.py  testcase.py  user.py
app/utils/: __init__.py  auth.py  course.py  practice.py  requests.py  tests.py
doc/: entity-relationship.puml
migrator/: env.py
migrator/versions/: 1028ca58cbf8_add_cascade_delete_to_attempt.py  1159346f9b82_add_timezone_into_datetime_fields.py  1d042839842d_add_constraints_to_participation.py  26a1bfcc7ecd_add_attempt_table.py  299ebb548a59_add_image_id_to_practice.py  3cb68938254c_.py  46256ed78a9d_add_is_request_field_in_participation.py  4f80b8382fcb_add_languages_array_to_practice.py  54c6938cda60_add_testcase_relation.py  54d0cb5de8d1_add_practice_table.py  (+13 more)
runner/: judge0.conf
tests/: conftest.py  test_course.py  test_languages.py  test_practice.py  test_testcase.py  test_user.py  utils.py
(+9 files in other folders)
