[tool.poetry]
name = "automated-lab-testing-sibfu-backend"
version = "0.1.0"
description = "Backend service for automatic testing of student work"
authors = ["Alex Kovalyuk"]
readme = "README.md"
packages = [{include = "automated_lab_testing_sibfu_backend"}]

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
aiohttp = "^3.8.6"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
redis = "^5.0.1"
celery = "^5.3.4"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
email-validator = "^2.1.0.post1"
sqlalchemy-utils = "^0.41.1"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.4"
bcrypt = "^4.1.2"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
